<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewConnect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="28dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/host"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <AutoCompleteTextView
                    android:id="@+id/editHost"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@color/text_color2"
                    android:layout_weight="1.03" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="28dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/port"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <AutoCompleteTextView
                    android:id="@+id/editPort"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="5000"
                    android:textColor="@color/text_color2"
                    android:maxLength="6"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="28dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

                <AutoCompleteTextView
                    android:id="@+id/editName"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_color2"
                    android:text="user1"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>